<resources>
    <string name="app_name">BBC World Service Media Manager</string>
    <string name="action_start_settings">Settings</string>
    <string name="action_favorite">Manage Files</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="about">About</string>

    <!-- Preference Titles -->
    <string name="download_header">Download preferences</string>
    <string name="init_run">Initial settings</string>
    <!-- Initial Prefs-->
    <string name="show_settigs">Show settings on app start</string>
    <!-- Download Preferences -->
    <string name="dl_qual">Download quality</string>
    <string name="background_behaviour">Download in background</string>
    <string name="low_qual">Lower quality (64kbps)</string>
    <string name="tc_behaviour">Total Commander app installed</string>
    <string name="select_dir">"Select download root location"</string>


    <string name="tc_header">"File (Podcasts) Management "</string>

    <string name="custom_license_title">"Open Source Libraries Used "</string>
    <string name="dl_dir_root">Download directory (Internal/External)</string>
    <string name="keep_forever">Keep podcasts forever</string>
    <string name="loading_podcast_options_from_bbc">Loading podcast options from BBC</string>
    <string name="download_state">Downloading / retrieving</string>
    <string name="button_complete">Finished download</string>
    <string name="button_download">Downloading</string>
    <string name="error_download">Error downloading</string>
    <string name="button_error">Error downloading</string>
    <string name="bg_confirm">Confirm</string>
    <string name="bg_confirm_message">Enabling background download has been disabled as it floats the device storage too quickly.</string>
    <string name="bg_warning">Warning</string>
    <string name="local_service_started">BBC Radio Live started</string>
    <string name="local_service_label">BBC World Service Live Radio</string>
    <string name="local_service_stopped">Radio Live stopped</string>
    <string name="Radio_Live_Text_View">Radio Live</string>
    <string name="Text_0_min_0_sec">0 min, 0 sec</string>
    <string-array name="bbc_programs">
        <item>BBC World Service Newshour</item>
        <item>BBC World Service Sportsworld</item>
        <item>BBC World Service Sportshour</item>
        <item>BBC World Service Business Daily</item>
        <item>BBC World Service Global News</item>
        <item>BBC Radio 5 Live Football Daily</item>
        <item>BBC World Service 606</item>
        <item>BBC World Service Radio Live (Early Beta)</item>
    </string-array>
</resources>