<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/download_header">
        <SwitchPreferenceCompat
            app:key="dl_background"
            app:title="@string/background_behaviour"
            app:defaultValue="false"/>
        <ListPreference
            app:title="@string/dl_qual"
            app:defaultValue="@string/low_qual"
            app:key="dl_qual"
            app:entries="@array/dl_qual_arry"
            app:entryValues="@array/dl_qual_arry"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/tc_header">
        <SwitchPreferenceCompat
            app:key="tc_installed"
            app:title="@string/tc_behaviour"
            app:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>