<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_favorite"
        app:showAsAction="never" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_start_settings"
        android:title="@string/action_start_settings"
        app:showAsAction="never"/>
    <!-- Doc, should always be in the overflow -->
    <item android:id="@+id/action_documentation"
        android:title="Documentation"
        app:showAsAction="never"/>
    <!-- About, should always be in the overflow -->
    <item android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>

    <!-- About, should always be in the overflow -->
    <item android:id="@+id/action_licenses"
        android:title="Licenses"
        app:showAsAction="never"/>

</menu>